--- a/app/src/main/res/layout/manuka_activity_add_new_number.xml
+++ b/app/src/main/res/layout/manuka_activity_add_new_number.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar"/>
 
     <FrameLayout
         android:id="@+id/commonFrame"
