--- a/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
+++ b/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
@@ -407,7 +407,7 @@
             android:text="@string/delete"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/_14sdp"></Button>
+            android:textSize="@dimen/_14sdp"/>
 
         <Button
             android:id="@+id/update"
@@ -420,7 +420,7 @@
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/_14sdp"
-            android:visibility="visible"></Button>
+            android:visibility="visible"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
