--- a/app/src/main/res/layout/manuka_admin_fragment_approved_rejected.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_approved_rejected.xml
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_4sdp"
-            android:layout_marginEnd="@dimen/_4sdp"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginEnd="@dimen/_4sdp"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
