--- a/app/src/main/res/layout/manuka_fragment_top_ads.xml
+++ b/app/src/main/res/layout/manuka_fragment_top_ads.xml
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="start"
-                        android:text="Top Ad"
+                        android:text="@string/top_ad"
                         android:textColor="@color/colorBlackText"
                         android:textSize="@dimen/_13sdp"
                         android:textStyle="bold" />
@@ -69,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="From Rs 600.00"
+                        android:text="@string/from_rs_600_00"
                         android:textColor="@color/colorBlackText"
                         android:textSize="@dimen/_11sdp" />
 
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:gravity="start"
-                    android:text="Get up to 10 times or more views by displaying your ad at the top"
+                    android:text="@string/get_up_to_10_times_or_more_views_by_displaying_your_ad_at_the_top"
                     android:textColor="@color/colorBlackText"
                     android:textSize="@dimen/_12sdp" />
 
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:gravity="start"
-                    android:text="Learn more"
+                    android:text="@string/learn_more"
                     android:textColor="@color/com_facebook_blue"
                     android:textSize="@dimen/_12sdp" />
 
@@ -118,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:buttonTint="@color/mainUiColour"
-                    android:text="3 days"
+                    android:text="@string/_3_days"
                     android:textSize="@dimen/_12sdp" />
 
                 <TextView
@@ -126,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Rs 600.00"
+                    android:text="@string/rs_600_00"
                     android:textColor="@color/colorGreenDark"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:buttonTint="@color/mainUiColour"
-                    android:text="7 days"
+                    android:text="@string/_7_days"
                     android:textSize="@dimen/_12sdp" />
 
                 <TextView
@@ -155,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Rs 1,000.00"
+                    android:text="@string/rs_1_000_00"
                     android:textColor="@color/colorGreenDark"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
@@ -184,7 +184,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Rs 1,400.00"
+                    android:text="@string/rs_1_400_00"
                     android:textColor="@color/colorGreenDark"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
