--- a/app/src/main/res/layout/divya_activity__m.xml
+++ b/app/src/main/res/layout/divya_activity__m.xml
@@ -8,5 +8,5 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ListView"></ListView>
+        android:id="@+id/ListView"/>
 </LinearLayout>
