--- a/app/src/main/res/layout/manuka_activity_payment_made.xml
+++ b/app/src/main/res/layout/manuka_activity_payment_made.xml
@@ -46,7 +46,7 @@
                     android:layout_marginBottom="@dimen/_4sdp"
                     android:layout_weight="1"
                     android:fontFamily="serif"
-                    android:text="Promotion ID: "
+                    android:text="@string/promotion_id"
                     android:textAlignment="textEnd"
                     android:textColor="@color/mainUiColour"
                     android:textSize="@dimen/_16sdp" />
@@ -74,7 +74,7 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_12sdp"
                 android:fontFamily="serif"
-                android:text="Your payment has been completed!"
+                android:text="@string/your_payment_has_been_completed"
                 android:textAlignment="center"
                 android:textColor="@color/colorBlackText"
                 android:textSize="@dimen/_14sdp" />
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_4sdp"
                 android:fontFamily="serif"
-                android:text="We will contact you during working hours to approve the promotions applied and the payment. Refer the email sent to the provided email address at checkout for the Promotion ID."
+                android:text="@string/we_will_contact_you_during_working_hours_to_approve_the_promotions_applied_and_the_payment_refer_the_email_sent_to_the_provided_email_address_at_checkout_for_the_promotion_id"
                 android:textAlignment="center"
                 android:textSize="@dimen/_12sdp" />
 
