--- a/app/src/main/res/layout/manuka_admin_orders_fragment_dashboard.xml
+++ b/app/src/main/res/layout/manuka_admin_orders_fragment_dashboard.xml
@@ -46,7 +46,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Recent orders" />
+                        android:text="@string/recent_orders" />
                 </LinearLayout>
 
 
@@ -77,7 +77,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Online Payments" />
+                        android:text="@string/online_payments" />
                 </LinearLayout>
 
 
@@ -108,7 +108,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="COD Orders" />
+                        android:text="@string/cod_orders" />
                 </LinearLayout>
 
 
@@ -138,7 +138,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Cancelled Orders" />
+                        android:text="@string/cancelled_orders" />
 
                 </LinearLayout>
 
@@ -170,7 +170,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Completed Orders" />
+                        android:text="@string/completed_orders" />
 
                 </LinearLayout>
 
@@ -202,7 +202,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Documentation" />
+                        android:text="@string/documentation" />
                 </LinearLayout>
 
 
@@ -233,7 +233,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sales Analysis" />
+                        android:text="@string/sales_analysis" />
 
                 </LinearLayout>
 
@@ -265,7 +265,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Product Analysis" />
+                        android:text="@string/product_analysis" />
                 </LinearLayout>
 
 
