--- a/app/src/main/res/layout/manuka_daily_bump_up.xml
+++ b/app/src/main/res/layout/manuka_daily_bump_up.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="start"
-                    android:text="Daily Bump Up"
+                    android:text="@string/daily_bump_up"
                     android:textColor="@color/colorBlackText"
                     android:textSize="@dimen/_13sdp"
                     android:textStyle="bold" />
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="From Rs 500.00"
+                    android:text="@string/from_rs_500_00"
                     android:textColor="@color/colorBlackText"
                     android:textSize="@dimen/_11sdp" />
 
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:gravity="start"
-                android:text="Get a fresh start every day and gain upto 5 times or more views!"
+                android:text="@string/get_a_fresh_start_every_day_and_gain_upto_5_times_or_more_views"
                 android:textColor="@color/colorBlackText"
                 android:textSize="@dimen/_12sdp" />
 
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:gravity="start"
-                android:text="Learn more"
+                android:text="@string/learn_more"
                 android:textColor="@color/com_facebook_blue"
                 android:textSize="@dimen/_12sdp" />
 
@@ -108,7 +108,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="3 days"
+                android:text="@string/_3_days"
                 android:textSize="@dimen/_14sdp" />
 
             <TextView
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
-                android:text="Rs 500.00"
+                android:text="@string/rs_500_00"
                 android:textColor="@color/colorGreenDark"
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold" />
@@ -136,7 +136,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="7 days"
+                android:text="@string/_7_days"
                 android:textSize="@dimen/_14sdp" />
 
             <TextView
@@ -144,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
-                android:text="Rs 1,000.00"
+                android:text="@string/rs_1_000_00"
                 android:textColor="@color/colorGreenDark"
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold" />
@@ -164,7 +164,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="15 days"
+                android:text="@string/_15_days"
                 android:textSize="@dimen/_14sdp" />
 
             <TextView
@@ -172,7 +172,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
-                android:text="Rs 1,500.00"
+                android:text="@string/rs_1_500_00"
                 android:textColor="@color/colorGreenDark"
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold" />
