--- a/app/src/main/res/layout/manuka_drawer_header_admin_order.xml
+++ b/app/src/main/res/layout/manuka_drawer_header_admin_order.xml
@@ -29,7 +29,7 @@
         android:textColor="@color/colorWhite"
         android:textStyle="bold|italic"
         android:textSize="@dimen/_12sdp"
-        android:text="Manage Orders"
+        android:text="@string/manage_orders"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
