--- a/app/src/main/res/layout/manuka_order_item_layout.xml
+++ b/app/src/main/res/layout/manuka_order_item_layout.xml
@@ -29,7 +29,7 @@
                     android:layout_height="80dp"
                     android:layout_gravity="start"
                     android:contentDescription="@string/continueBtn"
-                    android:padding="@dimen/_4sdp"></ImageView>
+                    android:padding="@dimen/_4sdp"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -49,7 +49,7 @@
                         android:text="@string/loading"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/_12sdp"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/orderItemCat"
@@ -57,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:text="@string/loading"
-                        android:textSize="@dimen/_12sdp"></TextView>
+                        android:textSize="@dimen/_12sdp"/>
 
                     <TextView
                         android:id="@+id/orderItemPrice"
@@ -68,7 +68,7 @@
                         android:text="@string/loading"
                         android:textColor="#088F83"
                         android:textSize="@dimen/_12sdp"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
 
@@ -91,19 +91,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/placed_date"
-                        android:textSize="@dimen/_10sdp"></TextView>
+                        android:textSize="@dimen/_10sdp"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/payment_mode"
-                        android:textSize="@dimen/_10sdp"></TextView>
+                        android:textSize="@dimen/_10sdp"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/payment_status"
-                        android:textSize="@dimen/_10sdp"></TextView>
+                        android:textSize="@dimen/_10sdp"/>
 
                 </LinearLayout>
 
@@ -120,7 +120,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="@string/loading"
-                        android:textSize="@dimen/_10sdp"></TextView>
+                        android:textSize="@dimen/_10sdp"/>
 
                     <TextView
                         android:id="@+id/orderPaymentMode"
@@ -129,7 +129,7 @@
                         android:gravity="end"
                         android:text="@string/loading"
                         android:textSize="@dimen/_10sdp"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/orderPaymentStatus"
@@ -140,7 +140,7 @@
                         android:text="@string/loading"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="@dimen/_10sdp"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
 
@@ -164,7 +164,7 @@
                     android:text="@string/orderItemPaymentTotal"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/_10sdp"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/orderPaymentTotal"
@@ -175,7 +175,7 @@
                     android:gravity="end"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/_12sdp"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
